Save local changes: update templates and readme

--- a/feedback_app/templates/confirm_delete.html
+++ b/feedback_app/templates/confirm_delete.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+Feedback - delete_feedback
+{% endblock title %}
 {% block content %}
 <form method="post">
     {% csrf_token %}
