--- a/feedback_app/templates/feedback_form.html
+++ b/feedback_app/templates/feedback_form.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+Feedback - Submit-form
+{% endblock title %}
 {% block content %}
 
 <!-- message area -->
