--- a/feedback_app/templates/admin_feedback_list.html
+++ b/feedback_app/templates/admin_feedback_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
-
+{% block title %}
+Feedback - Users_feedback
+{% endblock title %}
 {% block content %}
 {% for feedback in feedbacks %}
 <div class="card mb-3 p-3">
