--- a/feedback_app/templates/edit_feedback.html
+++ b/feedback_app/templates/edit_feedback.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+Feedback - edit-feedback
+{% endblock title %}
 {% block content %}
 <div class="container" style="max-width:600px;">
   <h2 class="mb-3">Edit Feedback</h2>
