--- a/feedback_app/templates/login.html
+++ b/feedback_app/templates/login.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+Feedback - Login
+{% endblock title %}
 {% block content %}
 <div class="container my-4" style="max-width: 420px;">
 <div class="card shadow-sm p-4">
