--- a/feedback_app/templates/my_feedback.html
+++ b/feedback_app/templates/my_feedback.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+Feedback - My-Feedback
+{% endblock title %}
 {% block content %}
 
 {% for fb in feedback %}
