--- a/feedback_app/templates/registration/registration.html
+++ b/feedback_app/templates/registration/registration.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+Feedback - Register
+{% endblock title %}
 {% block content %}
 <div class="container d-flex justify-content-center mt-5">
     <div class="card shadow-sm p-4" style="width: 420px;">
