--- a/feedback_app/templates/login.html
+++ b/feedback_app/templates/login.html
@@ -15,7 +15,7 @@ Feedback - Login
 </form>
  <div class="text-center mt-3">
             <small>Don't have an account? 
-                <a href="{% url 'register' %}">Login</a>
+                <a href="{% url 'register' %}">Register</a>
             </small>
         </div>
 </div>
