--- a/templates/base.html
+++ b/templates/base.html
@@ -10,126 +10,26 @@
 
   <body>
     <!-- Navbar section -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a
-          class="navbar-brand"
-          href="{% if user.is_authenticated and user.is_staff or user.is_authenticated and user.is_superuser %}
-{% url 'admin_feedback_list' %}{% else %}{% url 'homepage' %}{% endif %}"
-        >
-          FeedbackApp
-        </a>
+    {% include "navbar.html" %}
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <div class="container-fluid">
+      <div class="row">
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="#">{{user.username}}</a>
-            </li>
+        {# Optional sidebar block. Child templates can override this. #}
+        {% block sidebar %}
+        <!-- empty by default -->
+        {% endblock sidebar %}
 
-            {% if user.is_authenticated and not user.is_staff and not user.is_superuser %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'my_feedback' %}">My Feedback</a>
-            </li>
-            {% endif %}
-            
-
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'register' %}">Register</a>
-            </li>
-            {% endif %}
-          </ul>
-        </div>
+        <!-- main content area: if sidebar overridden, layout expects sidebar col, otherwise full width -->
+        <main id="main-content" class="{% block main_class %}col-12{% endblock main_class %} px-md-4 py-4">
+          {% block content %}{% endblock content %}
+        </main>
       </div>
-    </nav>
-    {% block content %} {% endblock content %}
+    </div>
+
 
     <!-- Footer section -->
-    <!-- Bootstrap Footer for Feedback Website -->
-    <footer class="bg-dark text-white pt-4 pb-4 mt-5">
-      <div class="container">
-        <div class="row">
-          <!-- About Section -->
-          <div class="col-md-4">
-            <h5 class="text-uppercase">About Us</h5>
-            <p>
-              We value your feedback! Share your thoughts about our products,
-              services, or anything you like. We're always listening to improve
-              our offerings.
-            </p>
-          </div>
-
-          <!-- Feedback Section -->
-          <div class="col-md-4">
-            <h5 class="text-uppercase">Submit Feedback</h5>
-            <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Feedback Form</a></li>
-              <li><a href="#" class="text-white">Contact Us</a></li>
-            </ul>
-          </div>
-
-          <!-- Social Media Links -->
-          <div class="col-md-4">
-            <h5 class="text-uppercase">Follow Us</h5>
-            <ul class="list-unstyled">
-              <li>
-                <a
-                  href="https://facebook.com"
-                  class="text-white"
-                  target="_blank"
-                  >Facebook</a
-                >
-              </li>
-              <li>
-                <a href="https://twitter.com" class="text-white" target="_blank"
-                  >Twitter</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://instagram.com"
-                  class="text-white"
-                  target="_blank"
-                  >Instagram</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://linkedin.com"
-                  class="text-white"
-                  target="_blank"
-                  >LinkedIn</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <!-- Footer Bottom -->
-      <div class="text-center mt-4">
-        <p>&copy; 2025 Your Company. All Rights Reserved.</p>
-      </div>
-    </footer>
+  {% include "footer.html" %}
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
   </body>
