--- a/feedback_app/templates/admin_dashboard/users_feedback_list.html
+++ b/feedback_app/templates/admin_dashboard/users_feedback_list.html
@@ -38,10 +38,28 @@
         <div class="text-end small text-muted">{{ feedback.created_at }}</div>
       </div>
 
-      <p class="mt-2 mb-1">{{ feedback.message }}</p>
+      <p class="mt-2 mb-1">message: {{ feedback.message }}</p>
+      
+      <!-- Replies Section -->
+<div class="mt-3 ms-3">
+
+    <h6 class="text-muted">Replies:</h6>
+
+    {% for reply in feedback.replies.all %}
+        <div class="border rounded p-2 mb-2 bg-light">
+            <strong>{{ reply.admin.username }}</strong>
+            <small class="text-muted">{{ reply.created_at }}</small>
+            <p class="mb-0">{{ reply.message }}</p>
+        </div>
+    {% empty %}
+        <p class="text-muted small">No replies yet.</p>
+    {% endfor %}
+
+</div>
+
 
       <div class="mt-2">
-        <a href="#" class="btn btn-sm btn-outline-secondary">Reply</a>
+        <a href="{% url 'admin_feedback_reply' feedback.pk %}" class="btn btn-sm btn-outline-secondary">Reply</a>
         <a href="{% url 'delete_feedback' feedback.id %}?next={{ 'admin_dashboard' }}" class="btn btn-sm btn-outline-danger">Delete</a>
 
       </div>
