--- a/feedback_app/templates/my_feedback.html
+++ b/feedback_app/templates/my_feedback.html
@@ -7,8 +7,24 @@ Feedback - My-Feedback
 {% for fb in feedback %}
     <div class="card mb-3 p-3">
         <strong>{{ fb.name }}</strong> ({{ fb.email }})<br>
-        <p>{{ fb.message }}</p>
         <small class="text-muted">{{ fb.created_at }}</small>
+        <p class="mt-2 mb-1">message: {{ fb.message }}</p>
+         <!-- Replies Section -->
+<div class="mt-3 ms-3">
+
+    <h6 class="text-muted">Replies:</h6>
+
+    {% for reply in fb.replies.all %}
+        <div class="border rounded p-2 mb-2 bg-light">
+            <strong>{{ reply.admin.username }}</strong>
+            <small class="text-muted">{{ reply.created_at }}</small>
+            <p class="mb-0">{{ reply.message }}</p>
+        </div>
+    {% empty %}
+        <p class="text-muted small">No replies yet.</p>
+    {% endfor %}
+
+</div>
 
          <!-- Buttons aligned right -->
     <div class="d-flex justify-content-end gap-2 mt-3">
