updated admin panel and changed from function to class view

--- a/feedback_app/templates/my_feedback.html
+++ b/feedback_app/templates/my_feedback.html
@@ -3,7 +3,7 @@
 Feedback - My-Feedback
 {% endblock title %}
 {% block content %}
-
+<h2>My Feedback-list</h2>
 {% for fb in feedback %}
     <div class="card mb-3 p-3">
         <strong>{{ fb.name }}</strong> ({{ fb.email }})<br>
