--- a/feedback_app/templates/navbar.html
+++ b/feedback_app/templates/navbar.html
@@ -32,10 +32,14 @@
             </li>
             {% endif %}
             
-
+            <form method="post" action="{% url 'logout' %}">
+            {% csrf_token %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+              <button type="submit" class="btn btn-secondary">Logout</button>
             </li>
+            </form>
+
+            
             {% else %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'login' %}">Login</a>
